# pyromark

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  mkdocs.yml  mypy.ini  properdocs.yml  pyproject.toml  pyromark.pyi  pytest.ini  pytest.toml  requirements-docs.txt  ruff.toml  rustfmt.toml  tombi.toml  zizmor.yaml
.github/: dependabot.yml  renovate.json
.github/workflows/: auto-merge.yml  ci.yml  ci2.yml  update-dependencies.yml
docs/: api.md  cli.md  index.md  install.md  installation.md  performance.md  requirements.txt
pyromark/: _extensions.py
python/pyromark/: __init__.py  __main__.py  _cli.py  _extensions.py  _options.py  _pyromark.pyi  event.py  event.pyi
src/: class_api.rs  common.rs  function_api.rs  lib.rs  serde_into_pyobject.rs  serde_to_py.rs
tests/: requirements.txt  test_pyromark.py
