[package]
name = "pyromark"
version = "0.9.8"
edition = "2024"
license = "MIT"
include = [
  "/python",
  "/src",
  "/Cargo.lock",
  "/Cargo.toml",
  "/LICENSE",
  "/pyproject.toml",
  "/README.md",
]
publish = false

[lib]
name = "_pyromark"
crate-type = ["cdylib"]

[dependencies]
pulldown-cmark = { version = "=0.13.0", default-features = false, features = [
  "html",
  "serde",
  "simd",
] }
pyo3 = "=0.27.2"
pythonize = "=0.28.0"

[profile.release]
strip = true
lto = "fat"
codegen-units = 1
