[package]
name = "pyromark"
version = "0.9.13"
edition = "2024"
license = "MIT"
include = [
  "/Cargo.lock",
  "/Cargo.toml",
  "/LICENSE",
  "/README.md",
  "/pyproject.toml",
  "/python",
  "/src",
]
publish = false

[lib]
crate-type = ["cdylib"]
name = "_pyromark"

[dependencies]
pulldown-cmark = { version = "=0.13.4", default-features = false, features = [
  "html",
  "serde",
  "simd",
] }
pyo3 = "=0.29.0"
pythonize = "=0.29.0"

[profile.release]
strip = true
lto = "fat"
codegen-units = 1
