[project]
name = "pyromark"
version = "0.9.8"
description = "Blazingly fast Markdown parser"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "monosans", email = "hsyqixco@protonmail.com" }]
keywords = ["converter", "html"]
classifiers = [
  "Natural Language :: English",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Programming Language :: Rust",
  "Typing :: Typed",
]
urls.documentation = "https://pyromark.readthedocs.io"
urls.repository = "https://github.com/monosans/pyromark"
scripts.pyromark = "pyromark._cli:main"
dependencies = ["typing-extensions>=3.7.4"]

[dependency-groups]
dev = [
  "mypy[faster-cache]==1.19.1",
  "pytest==9.0.2",
  "pytest-github-actions-annotate-failures==0.3",
  "ruff==0.15.4",
]
docs = [
  "mkdocs-materialx==10.0.9",
  "mkdocs-minify-html-plugin==0.3.9",
  "mkdocstrings==1.0.3",
  "mkdocstrings-python==2.0.3",
  "ruff==0.15.4",
]

[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[tool.maturin]
module-name = "pyromark._pyromark"
python-source = "python"

[tool.uv]
cache-keys = [
  { file = "pyproject.toml" },
  { file = "src/**/*.rs" },
  { file = "Cargo.toml" },
  { file = "Cargo.lock" },
]
