[project]
name = "pyromark"
version = "0.9.13"
description = "Blazingly fast Markdown parser"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "monosans", email = "hsyqixco@protonmail.com" }]
keywords = ["converter", "html"]
classifiers = [
  "Natural Language :: English",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Programming Language :: Rust",
  "Typing :: Typed",
]
urls.documentation = "https://monosans.github.io/pyromark"
urls.repository = "https://github.com/monosans/pyromark"
scripts.pyromark = "pyromark._cli:main"
dependencies = ["typing-extensions>=3.7.4"]

[dependency-groups]
dev = [
  "mypy==2.3.0",
  "pytest==9.1.1",
  "pytest-github-actions-annotate-failures==0.4.2",
  "ruff==0.15.21",
]
docs = [
  "mkdocstrings==1.0.6",
  "mkdocstrings-python==2.0.5",
  "ruff==0.15.21",
  "zensical==0.0.50",
]

[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[tool.maturin]
module-name = "pyromark._pyromark"
python-source = "python"

[tool.uv]
cache-keys = [
  { file = "pyproject.toml" },
  { file = "src/**/*.rs" },
  { file = "Cargo.toml" },
  { file = "Cargo.lock" },
]
exclude-newer = "3 days"
